fix: 測試改用 Collections.singleton 取代 Java 9+ 的 Set.of
專案 target 為 Java 8，Set.of 是 Java 9+ API，會在 JDK 8 上編譯失敗
（IDE 據 source level 正確標紅，Maven 因使用 JDK 21 才未暴露）。
改用 Java 5 起可用的 Collections.singleton，並以 JDK 8 實際編譯驗證通過。