@@ -21,7 +21,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.util.Set;
+import java.util.Collections;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -45,7 +45,7 @@ class IssueServiceImplTest {
     @InjectMocks
     private IssueServiceImpl issueService;
 
-    private final LoginUserContext operator = new LoginUserContext(1L, 1L, Set.of("ZZ"), false);
+    private final LoginUserContext operator = new LoginUserContext(1L, 1L, Collections.singleton("ZZ"), false);
 
     @Test
     @DisplayName("發放成功時寫入發放記錄並快照員工信息")
